lib/tests/ui-nightly/invalid_ignore_attr.stderr
error: unrecognized attribute shape; should have `#[ignore] or `#[ignore = "value"]` form
 --> tests/ui-nightly/invalid_ignore_attr.rs:4:1
  |
4 | #[ignore(_arg > 1)]
  | ^^^^^^^^^^^^^^^^^^^

error: unrecognized attribute shape; should have `#[ignore] or `#[ignore = "value"]` form
  --> tests/ui-nightly/invalid_ignore_attr.rs:10:1
   |
10 | #[ignore(message = "???")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
